--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "react_orders",
+  "name": "react_product-categories-practice",
   "homepage": ".",
   "version": "0.1.0",
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "dependencies": {
-    "@cypress/react": "^5.12.4",
-    "bulma": "^0.9.3",
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "bulma": "^0.9.4",
+    "postcss": "^8.4.18",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,6 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "cross-env": "^7.0.3",
     "cypress": "^9.5.3",
     "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.11.2",
@@ -65,7 +65,7 @@
     "projectType": "react",
     "tests": {
       "_comment": "Add `cypressComponents: true` to enable component tests",
-      "cypressComponents": true
+      "cypress": true
     }
   }
 }
